--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <canvas id="canvas"></canvas>
     <script type="module" src="./index.ts"></script>
   </body>
 </html>
